[tool.poetry]
name = "trafficThief"
version = "0.1.0"
description = "A post-exploitation utility to stream TCP traffic and TLS keys to Wireshark from a remote host in real-time because fuck it"
authors = ["bmshema <bmshemanski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
riposte = "^0.4.1"
paramiko = "^2.12.0"
paramiko-expect = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
