[tool.poetry]
name = "trafficThief"
version = "0.1.0"
description = "A post-exploitation utility to stream traffic and SSL/TLS keys to Wireshark from a remote host."
authors = ["bmshema <bmshemanski@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
riposte = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
